# crudauth

./: .gitignore  README.md  pyproject.toml  zensical.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  linting.yml  tests.yml  type-check.yml
crudauth/: __init__.py  _register.py  constants.py  core.py  crud_auth.py  exceptions.py  hooks.py  identity.py  principal.py  provisioning.py  repository.py  sudo.py  utils.py
crudauth/email/: __init__.py  channel.py  config.py  constants.py  router.py  sender.py  service.py
crudauth/models/: __init__.py  mixin.py
crudauth/oauth/: __init__.py  constants.py  factory.py  provider.py  router.py  schemas.py  service.py
crudauth/oauth/providers/: __init__.py  github.py  google.py  oidc.py
crudauth/ratelimit/: __init__.py  base.py  config.py  constants.py  policy.py
crudauth/ratelimit/backends/: __init__.py  memory.py  redis.py
crudauth/register/: route.py
crudauth/storage/: __init__.py  base.py  constants.py
crudauth/storage/backends/: __init__.py  memory.py  redis.py
crudauth/transports/: __init__.py
docs/: architecture.md  changelog.md  getting-started.md  index.md  why-crudauth.md
docs/api/: email.md  endpoints.md  identity.md  index.md  transports.md
docs/community/: code-of-conduct.md  contributing.md  index.md  license.md
docs/cookbook/: account-management.md  email-password.md  going-to-production.md  index.md  token-api.md  use-the-building-blocks.md  username-only.md  web-and-api.md
docs/guides/: index.md
docs/guides/auth/: bearer.md  (+6 more)
docs/includes/: abbreviations.md
docs/learn/: 0-how-web-auth-works.md  1-how-auth-goes-wrong.md  index.md
docs/stylesheets/: extra.css
src/crudauth/: __init__.py
tests/: conftest.py  test_bearer_transport.py  test_change_password.py  test_column_map.py  test_cookie_policy.py  test_custom_transport.py  test_email_flows.py  test_email_ratelimit_and_validation.py  test_gates.py  test_identity.py  test_multi_transport.py  test_new_user_fields.py  test_oauth_flow.py  test_oauth_providers.py  test_ratelimit.py  test_recovery_verification.py  test_register_gating.py  test_register_schema.py  test_regressions.py  test_repository_columnmap.py  test_session_management.py  test_session_manager.py  test_session_transport.py  test_set_password.py  test_storage_conformance.py  test_toolbox.py  test_units.py
tests/e2e/: conftest.py  test_flows.py
tests/email/: test_channels.py  test_email_context.py  test_flows.py  test_ratelimit.py
tests/oauth/: test_oidc.py  test_token_exchange.py
tests/transports/: test_bearer.py  test_management_routes.py
(+19 files in other folders)
