[project]
name = "crudauth"
version = "0.0.1"
description = "Authentication for FastAPI."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Igor Benav", email = "igor.magalhaes.r@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/benavlabs/crudauth"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
